# lumiere-backend

./: .env.example  .env.production  .gitignore  COMPONENT_STANDARD.md  DOCKER_COMPOSE_USAGE.md  Makefile  PORTS.md  PYPI_REGISTRY.md  README.md  SERVICES.md  SERVICE_DISCOVERY.md  docker-compose.development.yaml  docker-compose.test.yaml  docker-compose.yaml  generate_docs.py  mkdocs.yml  ports.yaml  requirements-full.txt
courier/: .env.example  .gitignore  Dockerfile  Makefile  README.md  __init__.py  broker.py  pyproject.toml  start_courier.sh
courier/config/: default.yaml  development.yaml  production.yaml  test.yaml
courier/src/courier/: __init__.py  broker.py  main.py
courier/src/courier/config/: settings.py
courier/src/courier/di/: __init__.py  container.py
courier/src/courier/domain/: __init__.py  auth.py
courier/src/courier/infrastructure/: __init__.py
courier/src/courier/presentation/: __init__.py
courier/tests/e2e/: test_full_flow.py  test_health_api.py  test_publish_api.py  test_shutdown.py  test_websocket_lifecycle.py
courier/tests/integration/infrastructure/: test_channel_management.py  test_connection_manager.py  test_jwt_verifier.py  test_message_publishing.py
courier/todo/: CLEAN_ARCHITECTURE_COMPLETE.md  COURIER_TODO.md  SESSION_2025-10-29.md  TODO_TASK_1.5.md  UNIT_TESTS_COMPLETE.md  courier_implementation_plan.md
laborant/: README.md  __init__.py  __main__.py  cli.py  pyproject.toml
laborant/core/: code_quality.py  component_mapper.py  orchestrator.py  reporter.py  test_executor.py
laborant/examples/: test_example.py
laborant/hooks/: pre-commit.template
laborant/src/laborant/: cli.py
passeur/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  __init__.py  cli_main.py  docker-compose-test.yaml  pyproject.toml  supervisord.conf
passeur/bridge/: __init__.py  package.json  server.js
passeur/bridge/instructions/: close_escrow.js  delegate_authority.js  discriminators.js  index.js  initialize_escrow.js  revoke_authority.js  withdraw.js
passeur/config/: default.yaml  development.yaml  production.yaml  test.yaml
passeur/src/passeur/: __init__.py  main.py
passeur/tests/e2e/: __init__.py  test_escrow_e2e.py
passeur/tests/helpers/: __init__.py  bridge_manager.py  setup_test_accounts.py
passeur/tests/integration/: test_bridge_endpoints.py  test_bridge_lifecycle.py
passeur/tests/unit/: test_config.py  test_utils.py
passeur/utils/: validation.py
pourtier/: .dockerignore  .env.example  .gitignore  =5.3.0  ALEMBIC_GUIDE.md  Dockerfile  Makefile  README.md  alembic.ini  config.py  docker-compose-development.yaml  docker-compose-production.yaml  docker-compose-test.yaml  main.py  migration.sql  pyproject.toml  rename_script.sh
pourtier/alembic/: env.py
pourtier/alembic/versions/: 20251017_1747_6f6dcb3513f2_create_initial_database_schema_with_constraints.py  20251017_1747_6f6dcb3513f2_create_initial_database_schema_with_constraints.py.autogenerated  20251027_0938_d0c93926b370_add_escrow_initialized_at_to_users.py  20251031_163652_add_last_blockchain_check.py  20251031_165357_remove_redundant_escrow_columns.py  20251102_remove_escrow_balance_from_users.py
pourtier/application/dto/: __init__.py
pourtier/application/use_cases/: __init__.py  create_user.py  deposit_to_escrow.py  initialize_escrow.py  update_user_profile.py  withdraw_from_escrow.py
pourtier/config/: default.yaml  development.yaml  production.yaml  test.yaml
pourtier/di/: __init__.py  dependencies.py
pourtier/docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT.md
pourtier/domain/entities/: escrow_transaction.py  legal_document.py  subscription.py  user_legal_acceptance.py
pourtier/domain/exceptions/: auth.py  blockchain.py  subscription.py
pourtier/domain/repositories/: i_escrow_transaction_repository.py  i_legal_document_repository.py
pourtier/domain/services/: i_escrow_contract_client.py  i_event_publisher.py  i_passeur_bridge.py
pourtier/domain/value_objects/: __init__.py  wallet_address.py
pourtier/infrastructure/auth/: __init__.py  jwt_handler.py
pourtier/infrastructure/blockchain/: escrow_contract_client.py  passeur_bridge_client.py  passeur_query_service.py
pourtier/infrastructure/cache/: __init__.py  i_cache_client.py  multi_layer_cache.py  redis_cache_client.py  response_cache.py
pourtier/infrastructure/event_bus/: __init__.py
pourtier/infrastructure/monitoring/: __init__.py  logger.py  metrics.py
pourtier/infrastructure/persistence/: __init__.py  database.py  schema.sql
pourtier/presentation/: __init__.py
pourtier/presentation/schemas/: __init__.py  auth_schemas.py  escrow_schemas.py  strategy_schemas.py  user_schemas.py
pourtier/scripts/: __init__.py  add_composite_index.sql  add_subscription_id_to_escrow.py  init_database.py  recreate_tables.py  seed_initial_terms.py  setup_database_user.sql
pourtier/src/pourtier/: __init__.py  main.py
pourtier/tests/: conftest.py
pourtier/tests/e2e/: test_auth_flow.py  test_subscriptions.py  test_user_onboarding_escrow_flow.py
pourtier/tests/helpers/: __init__.py  cleanup_test_db.py  setup_test_db.py  sign_message.py
pourtier/todo/: DEPENDENCY_INJECTION_REFACTOR.md  ESCROW_INITIALIZATION_FIX.md  TODO.md  add_wallet_balance_endpoint.md
shared/: .gitignore  README.md  __init__.py  courier_client.py  pyproject.toml
shared/blockchain/: __init__.py  escrow_helpers.py  solana_client.py  transaction_signer.py  wallets.py
shared/docs/: README.md  RESILIENCE_GUIDE.md
shared/health/: __init__.py  checks.py  health_server.py
shared/indicators/: __init__.py  base.py  bb.py  ema.py  macd.py  patterns.py  rsi.py
shared/lifecycle/: graceful_shutdown.py
shared/observability/: __init__.py  tracing.py
shared/reporter/: __init__.py  system_reporter.py
shared/reporter/emojis/: base_emojis.py  emoji.py  indicator_emojis.py
shared/resilience/: __init__.py  circuit_breaker.py  exceptions.py  idempotency.py  rate_limiter.py
shared/src/shared/: courier_client.py
shared/strategy/: __init__.py
shared/tests/: docker_helper.py  models.py  test_base.py
(+488 files in other folders)
