[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "passeur"
version = "0.1.0"
description = "Blockchain bridge for Lumière escrow smart contract"
requires-python = ">=3.11"
dependencies = [
    "shared",
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "base58>=2.1.0",
    "click>=8.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.scripts]
passeur = "cli_main:main"

[tool.setuptools]
py-modules = ["cli_main", "__init__"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "config*", "bridge*", "tests*", "utils*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88
