[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "passeur"
version = "0.1.0"
description = "Blockchain bridge for Lumiere escrow smart contract"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "shared==0.1.5",
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.1.0",
    "base58>=2.1.0",
    "click>=8.0.0",
    "requests>=2.31.0",
    "anchorpy>=0.18.0",
    "solders>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xprocess>=0.23.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.6",
]

[project.scripts]
passeur = "passeur.cli_main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["passeur*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py311"
