[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pourtier"
version = "0.1.0"
description = "Pourtier - User Management & Strategy Activation Layer"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Lumiere Team", email = "dev@lumiere.com"}
]

dependencies = [
    "shared==0.1.4",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "solders>=0.18.0",
    "anchorpy>=0.18.0",
    "solana>=0.30.0",
    "stripe>=7.0.0",
    "httpx>=0.25.0",
    "redis>=5.0.0",
    "pyyaml>=6.0.1",
    "PyNaCl>=1.5.0",
    "base58>=2.1.1",
    "aiohttp>=3.9.0",
    "tenacity>=8.2.0",
    "prometheus-client>=0.19.0",
    "cachetools>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-xprocess>=0.23.0",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "ruff>=0.1.6",
    "ipython>=8.12.0",
]

[project.scripts]
pourtier = "pourtier.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pourtier*"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
