[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared"
version = "0.1.4"
description = "Shared utilities for Lumière trading system"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "solders>=0.18.0",
    "solana>=0.30.0",
    "anchorpy>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[tool.setuptools]
packages = [
    "shared",
    "shared.blockchain",
    "shared.indicators",
    "shared.reporter",
    "shared.reporter.emojis",
    "shared.tests",
]

[tool.setuptools.package-dir]
shared = "."

# Include keypairs as package data
[tool.setuptools.package-data]
"shared.blockchain" = ["keypairs/**/*.json"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88
